--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,16 @@ description = "Skyward Enhanced Ground Station"
 license = "MIT"
 
 [dependencies]
+# GUI & Rendering
+eframe = "0.29"
+egui = { version = "0.29", features = ["log"] }
+egui_plot = "0.29"
+egui_tiles = "0.10"
+# Persistency
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+# Logging
+env_logger = "0.11"
+log = "0.4"
+# Utility
+enum_dispatch = "0.3"
