--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,17 @@ description = "Skyward Enhanced Ground Station"
 license = "MIT"
 
 [dependencies]
-# GUI & Rendering
+# ======= GUI & Rendering =======
+egui_tiles = "0.10"
 eframe = "0.29"
 egui = { version = "0.29", features = ["log"] }
 egui_plot = "0.29"
-egui_tiles = "0.10"
-# Persistency
+# ========= Persistency =========
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-# Logging
+# =========== Logging ===========
 env_logger = "0.11"
 log = "0.4"
-# Utility
+# =========== Utility ===========
+# for dynamic dispatch
 enum_dispatch = "0.3"
