--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,14 @@ eframe = { version = "0.29", features = ["persistence"] }
 egui = { version = "0.29", features = ["log"] }
 egui_plot = "0.29"
 egui_file = "0.19"
+# =========== Asynchronous ===========
+tokio = { version = "1.41", features = ["rt-multi-thread"] }
 # ========= Persistency =========
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 # =========== Logging ===========
-env_logger = "0.11"
-log = "0.4"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 # =========== Utility ===========
 # for dynamic dispatch
 enum_dispatch = "0.3"
