--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,16 @@ license = "MIT"
 # ======= GUI & Rendering =======
 egui_tiles = "0.10"
 eframe = "0.29"
-egui = { version = "0.29", features = ["log"] }
+egui = { version = "0.29" }
 egui_plot = "0.29"
+# =========== Asynchronous ===========
+tokio = { version = "1.41", features = ["rt-multi-thread"] }
 # ========= Persistency =========
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 # =========== Logging ===========
-env_logger = "0.11"
-log = "0.4"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 # =========== Utility ===========
 # for dynamic dispatch
 enum_dispatch = "0.3"
