--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,14 +13,30 @@ egui_tiles = "0.10"
 eframe = "0.29"
 egui = { version = "0.29" }
 egui_plot = "0.29"
-# =========== Asynchronous ===========
-tokio = { version = "1.41", features = ["rt-multi-thread"] }
 # ========= Persistency =========
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 # =========== Logging ===========
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+# =========== Performance ===========
+# for fast mutexes
+parking_lot = "0.12"
+# for fast channels
+crossbeam-channel = "0.5"
 # =========== Utility ===========
 # for dynamic dispatch
 enum_dispatch = "0.3"
+strum = "0.26"
+anyhow = "1.0"
+
+# =========== Asynchronous ===========
+[dependencies.tokio]
+version = "1.41"
+features = ["rt-multi-thread", "net", "parking_lot", "sync"]
+
+# =========== Mavlink ===========
+[dependencies.skyward_mavlink]
+git = "https://git.skywarder.eu/avn/swd/mavlink/mavlink-skyward-lib.git"
+branch = "rust-strum"
+features = ["lyra", "serde", "strum"]
