--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,25 @@ egui_tiles = "0.10"
 eframe = "0.29"
 egui = { version = "0.29" }
 egui_plot = "0.29"
+# =========== Asynchronous ===========
+tokio = { version = "1.41", features = [
+    "rt-multi-thread",
+    "net",
+    "parking_lot",
+    "sync",
+] }
+# =========== Mavlink ===========
+# skyward_mavlink = { git = "https://git.skywarder.eu/avn/swd/mavlink/mavlink-skyward-lib.git", branch = "rust-strum", features = [
+#     "reflection",
+#     "lyra",
+#     "serde",
+# ] }
+mavlink-bindgen = { version = "0.13.1", features = ["serde"] }
+skyward_mavlink = { path = "../mavlink-skyward-lib/mavlink_rust", features = [
+    "reflection",
+    "lyra",
+    "serde",
+] }
 # ========= Persistency =========
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -27,16 +46,4 @@ crossbeam-channel = "0.5"
 # =========== Utility ===========
 # for dynamic dispatch
 enum_dispatch = "0.3"
-strum = "0.26"
 anyhow = "1.0"
-
-# =========== Asynchronous ===========
-[dependencies.tokio]
-version = "1.41"
-features = ["rt-multi-thread", "net", "parking_lot", "sync"]
-
-# =========== Mavlink ===========
-[dependencies.skyward_mavlink]
-git = "https://git.skywarder.eu/avn/swd/mavlink/mavlink-skyward-lib.git"
-branch = "rust-strum"
-features = ["lyra", "serde", "strum"]
