First attempt of a web build

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # Os generated files
 .DS_Store
 
-# Build related
-/target
+# trunk output folder
+dist
+
+# Rust compile target directories:
+target
+target_ra
+target_wasm
