--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ license = "MIT"
 [dependencies]
 # ======= GUI & Rendering =======
 egui_tiles = "0.10"
-eframe = "0.29"
+eframe = { version = "0.29", features = ["persistence"] }
 egui = { version = "0.29", features = ["log"] }
 egui_plot = "0.29"
+egui_file = "0.19"
 # ========= Persistency =========
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -22,3 +23,4 @@ log = "0.4"
 # =========== Utility ===========
 # for dynamic dispatch
 enum_dispatch = "0.3"
+egui_extras = "0.29.1"
