--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,35 @@ eframe = { version = "0.29", features = ["persistence"] }
 egui = { version = "0.29", features = ["log"] }
 egui_plot = "0.29"
 egui_file = "0.19"
+# =========== Asynchronous ===========
+tokio = { version = "1.41", features = [
+    "rt-multi-thread",
+    "net",
+    "parking_lot",
+    "sync",
+] }
+# =========== Mavlink ===========
+skyward_mavlink = { git = "https://git.skywarder.eu/avn/swd/mavlink/mavlink-skyward-lib.git", branch = "rust-strum", features = [
+    "reflection",
+    "orion",
+    "serde",
+] }
+mavlink-bindgen = { version = "0.13.1", features = ["serde"] }
 # ========= Persistency =========
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 # =========== Logging ===========
-env_logger = "0.11"
-log = "0.4"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+# =========== Performance ===========
+# for fast mutexes
+parking_lot = "0.12"
+# for fast channels
+crossbeam-channel = "0.5"
 # =========== Utility ===========
 # for dynamic dispatch
 enum_dispatch = "0.3"
 egui_extras = "0.29.1"
+strum = "0.26"
+anyhow = "1.0"
+ring-channel = "0.12.0"
