--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ license = "MIT"
 # ======= GUI & Rendering =======
 egui_tiles = "0.12"
 eframe = { version = "0.31", features = ["persistence"] }
-egui = { version = "0.31", features = ["log"] }
+egui = { version = "0.31", features = ["log", "mint"] }
 egui_extras = { version = "0.31", features = ["svg"] }
 egui_plot = "0.31"
 egui_file = "0.22"
@@ -36,6 +36,9 @@ strum_macros = "0.26"
 anyhow = "1.0"
 ring-channel = "0.12.0"
 thiserror = "2.0.7"
+uuid = { version = "1.12.1", features = ["serde", "v7"] }
+glam = { version = "0.29", features = ["serde", "mint"] }
+mint = "0.5.9"
 
 [dependencies.skyward_mavlink]
 git = "https://git.skywarder.eu/avn/swd/mavlink/mavlink-skyward-lib.git"
