--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ skyward_mavlink = { git = "https://git.skywarder.eu/avn/swd/mavlink/mavlink-skyw
     "serde",
 ] }
 mavlink-bindgen = { version = "0.13.1", features = ["serde"] }
+serialport = "4.7.0"
 # ========= Persistency =========
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
