--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,3 +48,4 @@ strum_macros = "0.26"
 anyhow = "1.0"
 ring-channel = "0.12.0"
 thiserror = "2.0.7"
+uuid = { version = "1.12.1", features = ["serde", "v7"] }
