--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,3 +51,6 @@ thiserror = "2.0.7"
 uuid = { version = "1.12.1", features = ["serde", "v7"] }
 glam = { version = "0.29", features = ["serde", "mint"] }
 mint = "0.5.9"
+quick-xml = { version = "0.37", features = ["serialize"] }
+nom = "7.1"
+resvg = "0.44"
