--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,6 @@ thiserror = "2.0.7"
 uuid = { version = "1.12.1", features = ["serde", "v7"] }
 profiling = { version = "1.0", features = ["profile-with-tracy"] }
 tracing-tracy = "0.11.4"
+
+[dev-dependencies]
+rand = "0.9.0"
