--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,9 +28,12 @@ serialport = "4.7.0"
 # ========= Persistency =========
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-# =========== Logging ===========
+# =========== Tracing and profiling ===========
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
+tracing-tracy = "0.11.4"
+profiling = { version = "1.0", features = ["profile-with-tracy"] }
+tracing-appender = "0.2"
 # =========== Utility ===========
 # for dynamic dispatch
 enum_dispatch = "0.3"
@@ -39,9 +42,6 @@ strum_macros = "0.26"
 anyhow = "1.0"
 ring-channel = "0.12.0"
 thiserror = "2.0.7"
-uuid = { version = "1.12.1", features = ["serde", "v7"] }
-profiling = { version = "1.0", features = ["profile-with-tracy"] }
-tracing-tracy = "0.11.4"
 
 [dev-dependencies]
 rand = "0.9.0"
