--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,18 +18,9 @@ egui_file = "0.22"
 # =========== Asynchronous ===========
 tokio = { version = "1.41", features = ["rt-multi-thread", "net", "sync"] }
 # =========== Mavlink ===========
-# skyward_mavlink = { git = "https://git.skywarder.eu/avn/swd/mavlink/mavlink-skyward-lib.git", branch = "rust-strum", features = [
-#     "reflection",
-#     "orion",
-#     "serde",
-# ] }
-skyward_mavlink = { path = "../mavlink-skyward-lib/mavlink_rust", features = [
+skyward_mavlink = { git = "https://git.skywarder.eu/avn/swd/mavlink/mavlink-skyward-lib.git", branch = "rust-strum", features = [
     "reflection",
     "orion",
-    "serde",
-] }
-# mavlink-bindgen = { version = "0.14", features = ["serde"] }
-mavlink-bindgen = { path = "../rust-mavlink/mavlink-bindgen", features = [
     "serde",
 ] }
 serialport = "4.7.0"
@@ -50,6 +41,11 @@ strum_macros = "0.26"
 anyhow = "1.0"
 ring-channel = "0.12.0"
 thiserror = "2.0.7"
+
+[dependencies.mavlink-bindgen]
+git = "https://git.skywarder.eu/avn/swd/mavlink/rust-mavlink.git"
+rev = "b7446436b3c96ca4c40d28b54eeed346e7bf021e"
+features = ["serde"]
 
 [dev-dependencies]
 rand = "0.9.0"
