Plot Enhancements and Major Refactor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,6 @@ egui_file = "0.22"
 # =========== Asynchronous ===========
 tokio = { version = "1.41", features = ["rt-multi-thread", "net", "sync"] }
 # =========== Mavlink ===========
-skyward_mavlink = { git = "https://git.skywarder.eu/avn/swd/mavlink/mavlink-skyward-lib.git", branch = "rust-strum", features = [
-    "reflection",
-    "orion",
-    "serde",
-] }
-mavlink-bindgen = { version = "0.13.1", features = ["serde"] }
 serialport = "4.7.0"
 # ========= Persistency =========
 serde = { version = "1.0", features = ["derive"] }
@@ -42,6 +36,16 @@ strum_macros = "0.26"
 anyhow = "1.0"
 ring-channel = "0.12.0"
 thiserror = "2.0.7"
+
+[dependencies.skyward_mavlink]
+git = "https://git.skywarder.eu/avn/swd/mavlink/mavlink-skyward-lib.git"
+rev = "03d37888f7b5a84b5032ca1af392a16da7f39df2"
+features = ["reflection", "orion", "serde"]
+
+[dependencies.mavlink-bindgen]
+git = "https://git.skywarder.eu/avn/swd/mavlink/rust-mavlink.git"
+rev = "da4add3de8243d3b8194b9793677e4c950686ddc"
+features = ["serde"]
 
 [dev-dependencies]
 rand = "0.9.0"
