--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,43 +2,40 @@
 name = "segs"
 version = "0.1.0"
 # if you're a contributor, you should add your name here
-authors = ["Federico Lolli <federico.lolli@skywarder.eu>"]
+authors = [
+    "Federico Lolli <federico.lolli@skywarder.eu>",
+    "Niccolò Betto <niccolo.betto@skywarder.eu>",
+]
 edition = "2024"
 description = "Skyward Enhanced Ground Software"
 license = "MIT"
 
 [dependencies]
-# ======= GUI & Rendering =======
+anyhow = "1.0"
+directories = "6.0.0"
 egui_tiles = "0.12"
 eframe = { version = "0.31", features = ["persistence"] }
 egui = { version = "0.31", features = ["log", "mint"] }
 egui_extras = { version = "0.31", features = ["svg"] }
 egui_plot = "0.31"
 egui_file = "0.22"
-# =========== Asynchronous ===========
-tokio = { version = "1.41", features = ["rt-multi-thread", "net", "sync"] }
-# =========== Mavlink ===========
-serialport = "4.7.0"
-# ========= Persistency =========
+enum_dispatch = "0.3"
+glam = { version = "0.29", features = ["serde", "mint"] }
+itertools = "0.14.0"
+mint = "0.5.9"
+profiling = { version = "1.0", features = ["profile-with-tracy"] }
+ring-channel = "0.12.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-# =========== Tracing and profiling ===========
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
-tracing-tracy = "0.11.4"
-profiling = { version = "1.0", features = ["profile-with-tracy"] }
-tracing-appender = "0.2"
-# =========== Utility ===========
-# for dynamic dispatch
-enum_dispatch = "0.3"
+serialport = "4.7.0"
+thiserror = "2.0.7"
 strum = "0.26"
 strum_macros = "0.26"
-anyhow = "1.0"
-ring-channel = "0.12.0"
-thiserror = "2.0.7"
+tracing = "0.1"
+tracing-appender = "0.2"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
+tracing-tracy = "0.11.4"
 uuid = { version = "1.12.1", features = ["serde", "v7"] }
-glam = { version = "0.29", features = ["serde", "mint"] }
-mint = "0.5.9"
 
 [dependencies.skyward_mavlink]
 git = "https://git.skywarder.eu/avn/swd/mavlink/mavlink-skyward-lib.git"
@@ -52,3 +49,18 @@ features = ["serde"]
 
 [dev-dependencies]
 rand = "0.9.0"
+
+[package.metadata.packager]
+product-name = "SEGS"
+description = "Skyward Enhanced Ground Software"
+version = "0.1.0"
+authors = [
+    "Federico Lolli <federico.lolli@skywarder.eu>",
+    "Niccolò Betto <niccolo.betto@skywarder.eu>",
+]
+identifier = "skywarder.eu"
+category = "DeveloperTool"
+license-file = "LICENSE"
+before-packaging-command = "cargo build --release"
+resources = ["assets/icon_*.png", "LICENSE", "README.md"]
+icons = ["assets/icon_*.png"]
