--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ enum_dispatch = "0.3"
 glam = { version = "0.29", features = ["serde", "mint"] }
 itertools = "0.14.0"
 mint = "0.5.9"
-profiling = { version = "1.0", features = ["profile-with-tracy"] }
+profiling = "1.0"
 ring-channel = "0.12.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -34,7 +34,6 @@ strum_macros = "0.26"
 tracing = "0.1"
 tracing-appender = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
-tracing-tracy = "0.11.4"
 uuid = { version = "1.12.1", features = ["serde", "v7"] }
 
 [dependencies.skyward_mavlink]
@@ -49,6 +48,9 @@ features = ["serde"]
 
 [dev-dependencies]
 rand = "0.9.0"
+
+[features]
+profiling = ["profiling/profile-with-tracy"]
 
 [package.metadata.packager]
 product-name = "SEGS"
