--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ egui_plot = "0.31"
 egui_file = "0.22"
 enum_dispatch = "0.3"
 glam = { version = "0.29", features = ["serde", "mint"] }
+itertools = "0.14.0"
 mint = "0.5.9"
 profiling = "1.0"
 ring-channel = "0.12.0"
