--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,8 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 
 [dependencies.skyward_mavlink]
 git = "https://git.skywarder.eu/avn/swd/mavlink/mavlink-skyward-lib.git"
-rev = "18062c9f6318de079b706a7c110761941fe07a85"
+# rev = "18062c9f6318de079b706a7c110761941fe07a85"
+branch = "required-by-segs"
 features = ["reflection", "orion", "serde"]
 
 [dependencies.mavlink-bindgen]
