--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,15 +22,16 @@ egui_file = "0.22"
 enum_dispatch = "0.3"
 glam = { version = "0.29", features = ["serde", "mint"] }
 itertools = "0.14.0"
+jiff = "0.2.13"
 mint = "0.5.9"
 profiling = "1.0"
 ring-channel = "0.12.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serialport = "4.7"
-thiserror = "2.0"
 strum = "0.26"
 strum_macros = "0.26"
+thiserror = "2.0"
 tracing = "0.1"
 tracing-appender = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
