--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 [dependencies.skyward_mavlink]
 git = "https://git.skywarder.eu/avn/swd/mavlink/mavlink-skyward-lib.git"
 rev = "2b08fa26437151155127c1348e9867d98de49b89"
-features = ["reflection", "orion", "serde"]
+features = ["reflection", "lyra", "serde"]
 
 [dependencies.mavlink-bindgen]
 git = "https://git.skywarder.eu/avn/swd/mavlink/rust-mavlink.git"
